--- a/pages/rankingList/rankingList.wxss
+++ b/pages/rankingList/rankingList.wxss
@@ -1,1 +1,50 @@
 /* pages/rankingList/rankingList.wxss */
+page{
+  padding: 0;
+  margin: 0;
+  overflow-x: hidden;
+  color: #515151;
+}
+.container{
+  width: 100%;
+  height:100%;
+  overflow: hidden;
+  padding: 15px;
+  font-size: 14px;
+}
+.book-info{
+  border-bottom: 1px solid #f6f6f6;
+  padding: 5px 0px;
+}
+.book-img{
+  display: inline-block;
+}
+.book-img image{
+  width: 96px;
+  height: 122px;
+}
+.book-name{
+  display: inline-block;
+  font-size: 16px;
+}
+.book-main{
+  
+  display: inline-block;
+  margin-left: 10px;
+}
+.book-author{
+  font-size: 12px;
+  color: #0099cc;
+  margin: 5px 0px;
+}
+.book-intro{
+  height: 50px;
+  overflow: hidden;
+  font-size: 12px;
+  color: #999999;
+}
+.book-state{
+  font-size: 11px;
+  color: #0099cc;
+  margin: 5px 0px;
+}
