小说排行榜部分

--- a/pages/books/books.wxml
+++ b/pages/books/books.wxml
@@ -8,7 +8,7 @@
       <text></text>
       <text></text>
     </navigator>
-    <navigator url="../rankingList/rankingList" catchtap='showRanklist' wx:for="{{ novelClass }}" wx:key="key" wx:for-item="item"  data-chanid="{{item.id}}">
+    <navigator url="../rankingList/rankingList?chanid={{item.id}}&&title={{item.name}} "  wx:for="{{ novelClass }}" wx:key="key" wx:for-item="item"  data-chanid="{{item.id}}">
       <text>{{item.name}}</text>
       <text style="font-size:12px;text-align:right;width:35%;margin-right:15%">{{item.counts+ "册"}}</text>
     </navigator>
