--- a/pages/rankingList/rankingList.wxss
+++ b/pages/rankingList/rankingList.wxss
@@ -12,6 +12,9 @@ page{
   padding: 15px;
   font-size: 14px;
 }
+.container scroll-view{
+  height: 100%;
+}
 .book-info{
   border-bottom: 1px solid #f6f6f6;
   padding: 5px 0px;
@@ -47,4 +50,12 @@ page{
   font-size: 11px;
   color: #0099cc;
   margin: 5px 0px;
+}
+.more{
+  width: 200px;
+  height: 20px;
+  padding: 10px;
+  text-align: center;
+  color: #aaaaaa;
+  margin: 0 auto;
 }
