--- a/pages/rankingList/rankingList.wxml
+++ b/pages/rankingList/rankingList.wxml
@@ -1,7 +1,7 @@
 <!--pages/rankingList/rankingList.wxml-->
 <view class="container" style=" width:{{ win_w-30 + 'px' }} ">
   <view >
-    <scroll-view  scroll-y="true" bindscrolltolower="lower"  class="book-info" wx:for="{{ book_info }}" wx:key="key" wx:for-item="item" data-bid="{{item.data_bid}}" data-href="{{ item.book_href }}" >
+    <view class="book-info" wx:for="{{ book_info }}" wx:key="key" wx:for-item="item" data-bid="{{item.data_bid}}" data-href="{{ item.book_href }}" data-name="{{item.book_name}}" data-src="{{item.img_src}}" bindtap="actioncnt" >
       <view class="book-img">
         <image src="{{ item.img_src }}"></image>
       </view>
@@ -23,7 +23,7 @@
           <text style="color:#ff6666;" >火热度：{{ item.collect_num }}</text>
         </view>
       </view>
-    </scroll-view>
+    </view>
     <view class="more" catchtap='lower' >点击加载更多</view>
   </view >
 </view>
