--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -5,12 +5,13 @@
       <input class='items-input' placeholder='查找书架中的图书' confirm-type='search' style="width:{{ win_w-55 + 'px' }};"/>
     </view>
   </view> 
-    
   <view class='con-item bookracks'>
     <view class='bookracks-item' style="width:{{ win_w-40 + 'px'}}">
-      <view class='book-list' wx:for="{{book_detail}}" wx:key="key" wx:for-item="items" >
+      <view class='book-list' wx:for="{{book_detail}}" wx:key="key" wx:for-item="items"  catchtap="bookTapAnimation"  data-chanid="{{items.id}}"  >
         <view>
-          <image class="booksrc" src="{{items.src}}" ></image>
+          <image class="booksrc" src="{{items.src}}" >
+            <icon class="whitedot" hidden="{{hidden}}" type="{{items.icontype}}" size="20" color="#ff6666" ></icon>
+          </image>
         </view>
         <text>{{items.name}}</text>
       </view>
@@ -21,10 +22,15 @@
         <text></text>
       </view>
     </view>
-    <view class='bookracks-item'>
+    <view class='bookracks-item' catchtap="bookManaOpt">
       <view class='books-edit'>
         <text>书籍管理</text>
       </view>
     </view>
+  </view>
+  <view class="editoption con-item" hidden="{{hidden}}" >
+      <view class="editcomplete" catchtap="bookManaOpt" >完成</view>
+      <view class="editdelete">删除</view>
+      <view class="editall">全选</view>
   </view>
 </view>
